--- a/aquariusswaptest16.3/index.html
+++ b/aquariusswaptest16.3/index.html
@@ -1666,7 +1666,7 @@ function setConnected(address, mode){
         btnAddTrustline.classList.remove("ghost","small");
         btnAddTrustline.classList.add("primary","warn");
         btnAddTrustline.style.flex = "1";
-        btnAddTrustline.textContent = notConnected ? "Connect to add trustline" : "Add AQUAmb Trustline";
+        btnAddTrustline.textContent = notConnected ? "Connect Wallet" : "Add AQUAmb Trustline";
       }
     }
 
