--- a/aquariusswaptest16.4/index.html
+++ b/aquariusswaptest16.4/index.html
@@ -1878,7 +1878,7 @@ function setConnected(address, mode){
             statusText  = "Pending";
             statusClass = "";
           }else{
-            statusText  = "Short-term (no interest)";
+            statusText  = "Void Lock";
             statusClass = "err";
           }
 
